assets/css/style.css
:root {
    --main-bg-color: #FB3640, #944BBB, #4392F1;
    --created-bg-color: #56EEF4, #E5D1D0, #32E875;
}

body {
    background-image: linear-gradient(-45deg, var(--main-bg-color));
    height: 100vh;
}

main {
    max-width: 400px;
    padding: 30px 20px;
    margin: auto;
    margin-top: 15%;
}

main form{
    display: flex;
    flex-direction: column;
    padding: 5px 30px 30px 30px;
    background-color: #ffffff7c;
    border-radius: 10px;
    box-shadow: 0px 0px 10px rgba(255, 255, 255, 0.288);
}

main form label{
    text-transform: capitalize;
    margin-top: 30px;
    margin-left: 1px;
    margin-bottom: 10px;
}

main form label::after {
    content: ' *';
    color: red;
}

main form input {
    border: none;
    background-color: transparent;
    height: 25px;
    padding: 5px;
    letter-spacing: 1px;
    transition: .3s ease-in-out;
    border-bottom: solid 2px #ffffff8c;
}

main form input:focus {
    outline: none;
    border: none;
}

main form .input_underline {
    background-image: linear-gradient(-45deg, var(--main-bg-color));
    height: 2px;
    width: 0;
    transition: .3s ease-in-out;
    border-radius: 5px;
}

main form button{
    background-image: linear-gradient(-45deg, var(--main-bg-color));
    color: #fff;
    font-size: 25px;
    margin: auto;
    margin-top: 40px;
    width: 80%;
    padding: 8px;
    border-radius: 10px;
    border: none;
    cursor: pointer;
    transition: .5 ease-in-out;
}

main form button:hover {
    scale: 1.05;
}

main form button:disabled {
    filter: opacity(.2);
    cursor: not-allowed;
}

main form .recovery_password {
    color: #fafafaa1;
    text-align: center;
    margin-top: 10px;
    font-size: .8em;
    text-underline-offset: 4px;
}

main form .recovery_password:hover {
    text-shadow: 0px 0px 3px;
}

main form button.account_created {
    content: "Account Created";
    background-image: linear-gradient(-45deg, var(--created-bg-color));
}

main form input:focus + .input_underline {
    width: 100%;
}


/* ----------- ERROR MENSAGES ---------------- */

main form .error_mensages {
    display: flex;
    flex-direction: column;
    gap: 2px;
    margin-top: 5px;
    font-size: 14px;
    color: #FB3640;
}
main form .error_mensages span::before {
    content: '* ';
}
main form .error_mensages span {
    display: none;
}

